re-parse-proc-macro/tests/compile_fail/duplicate_variable.stderr
error: The variable var is already declared. Capturing a variable twice is not supported right now.
 --> tests/compile_fail/duplicate_variable.rs:5:15
  |
5 |     re_parse!("{var}B{var}", "111B222");
  |               ^^^^^^^^^^^^^
